<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/card_view_style_default"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/register_card_view_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/card_view_layout_style_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/register_image_view_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:src="@drawable/ic_launcher_foreground"
                    app:civ_border_color="@color/primary"
                    app:civ_border_width="2dp" />

                <Button
                    android:id="@+id/register_button_upload_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_upload_photo" />

                <EditText
                    android:id="@+id/register_edit_text_name"
                    style="@style/edit_text_style_default.with_top_margin"
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_rounded_outline"
                    android:hint="@string/register_message_enter_name"
                    android:inputType="text"
                    android:theme="@style/edit_text_theme_default" />

                <EditText
                    android:id="@+id/register_edit_text_surname"
                    style="@style/edit_text_style_default.with_top_margin"
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_rounded_outline"
                    android:hint="@string/register_message_enter_surname"
                    android:inputType="text"
                    android:theme="@style/edit_text_theme_default" />

                <EditText
                    android:id="@+id/register_edit_text_login"
                    style="@style/edit_text_style_default.with_top_margin"
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_rounded_outline"
                    android:hint="@string/register_message_enter_email"
                    android:inputType="textEmailAddress"
                    android:theme="@style/edit_text_theme_default" />

                <TextView
                    style="@style/text_style_default.centered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/register_text_password_input_description" />

                <EditText
                    android:id="@+id/register_edit_text_password"
                    style="@style/edit_text_style_default.with_top_margin"
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_rounded_outline"
                    android:hint="@string/message_enter_password"
                    android:inputType="textPassword"
                    android:theme="@style/edit_text_theme_default" />

                <EditText
                    android:id="@+id/register_edit_text_password_confirm"
                    style="@style/edit_text_style_default.with_top_margin"
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_rounded_outline"
                    android:hint="@string/register_message_confirm_password"
                    android:inputType="textPassword"
                    android:theme="@style/edit_text_theme_default" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/register_card_view_footer"
        style="@style/card_view_style_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            style="@style/card_view_layout_style_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_text_enter_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:text="@string/register_text_have_account"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/text_size_default" />

                <TextView
                    android:id="@+id/register_text_enter"
                    style="@style/text_style_default"
                    android:layout_width="wrap_content"
                    android:text="@string/register_text_enter"
                    android:textColor="@color/primary"
                    android:textStyle="italic" />
            </LinearLayout>

            <Button
                android:id="@+id/register_button_register"
                style="@style/text_style_default"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/register_title_register" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>